--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,41 @@
         <item>5%</item>
     </string-array>
 
+    <string-array name="SCATEGORY">
+        <item>Food</item>
+        <item>Clothing</item>
+        <item>Home</item>
+        <item>Education</item>
+        <item>Health &amp; Fitness</item>
+        <item>Drinks</item>
+        <item>Sports</item>
+        <item>Family &amp; Personal</item>
+        <item>Travel</item>
+        <item>Bills</item>
+        <item>Car</item>
+        <item>Entertainment</item>
+        <item>Shopping</item>
+        <item>Accommodation</item>
+        <item>Utility</item>
+        <item>Other</item>
+        <item>Transport</item>
+        <item>Groceries</item>
+        <item>Hobbies</item>
+        <item>Pets</item>
+        <item>Cinema</item>
+        <item>Love</item>
+        <item>Kids</item>
+        <item>Rent</item>
+        <item>Gift</item>
+        <item>Savings</item>
+    </string-array>
+
+    <string-array name="ECATEGORY">
+        <item>Business</item>
+        <item>Gifts</item>
+        <item>Loan</item>
+        <item>Extra Income</item>
+        <item>Salary</item>
+    </string-array>
+
 </resources>
